0.21 - 2013-02-16
      - Allow type libraries more control over inflation to Moose types (tobyink)

0.20 - 2013-02-11
      - Improve documentation

0.19 - 2013-02-10
      - New type: Enum

0.18 - 2013-02-09
      - AnyOf now supports parameterized types
        API CHANGE: AnyOf no longer takes types in a string
                    This means you should write: AnyOf[Int, CodeRef] 
                    instead of: AnyOf['Int', 'CodeRef']
      - New type: AllOf (intersection of defined types)
      - Simplify new make_type() code (haarg)

0.17 - 2013-02-08
      - New type: AnyOf (union of defined types)

0.16 - 2012-10-11
      - Handle undef with grace (github issues 13 and 14)
      - Improve POD for: InstanceOf, ConsumerOf, HasMethods
      - Restrict ConsumerOf and HasMethods to something blessed (i.e. an instance)
      - Bump Moo requirements (better role composition and isa builder check) 

0.15 - 2012-09-28
      - Relax InstanceOf definition to use isa()

0.14 - 2012-09-19
      - Remove pesky Set::Object from build requirements

0.13 - 2012-09-18
      - Only test SetObject when Set::Object is already installed

0.12 - 2012-09-11
       Release Name: Independence for Catalunya
       - Improve POD
       - Add testing dependency
       - Correct SetObject
       - Enable ConsumerOf to accept multiple roles

0.11 - 2012-09-10
       - Generalize parameterizable (fREW)
       - Rework type string arguments to follow ['Str'] pattern (mattp)
       - New types: InstanceOf, ConsumerOf and HasMethods

0.10 - 2012-08-26
       - Allow Type() arguments (mattp)
       - Improve error handling for parameterized types (mattp)
       - Improve documentation

0.09 - 2012-07-23
       - Preserve attribute properties defined after 'isa'
         [github issue #7]
         Failing tests (xsawyerx)

0.08 - 2012-07-03
       - Support for parameterized type: Maybe
         For example,  isa => Maybe[Int]

0.07 - 2012-06-29